--- a/build.config
+++ b/build.config
@@ -185,7 +185,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 
 ### Include Wireguard VPN module and utilite
-#CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
+CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
@@ -230,7 +230,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 CONFIG_FIRMWARE_INCLUDE_STUBBY=y
 
 ### Include doh_proxy DNS-over-HTTPS (DoH) ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_DOH=y
+#CONFIG_FIRMWARE_INCLUDE_DOH=y
 
 ### Include WPAD support
 #CONFIG_FIRMWARE_INCLUDE_WPAD=y
@@ -256,6 +256,10 @@ CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 ### Include iPerf3 support ~0.13MB
 #CONFIG_FIRMWARE_INCLUDE_IPERF3=y
 
-CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
+
+### Include nfqws ( https://github.com/bol-van/zapret ) ~0.14MB
+CONFIG_FIRMWARE_INCLUDE_NFQWS=y
+# Override kernel config
 CONFIG_NETFILTER_NETLINK_QUEUE=m
+CONFIG_NETFILTER_XT_TARGET_NFQUEUE=m
 CONFIG_IP_NF_QUEUE=m
